Added map and more lore

--- a/public/History/index.html
+++ b/public/History/index.html
@@ -22,7 +22,7 @@
   <meta property="og:description" content="DM DM! Do I know all this?
 Perhaps, anyone who has recieved formal higher education likely knows the basics of these, and if you haven’t you likely know of it from stories passed down from your family
 The History of Tu’um Mundi is split into five ages, each one marked by new technology, magic, rulers, discoveriies, and more.
-The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Dragonic Gods ruled. The most powerful of the dragons foresaw their destruction, and in an effort to save themselves, they created the 10 Crowns. But these were not enough, in spite of the power of the Crowns, the great Draconic Gods perished. In their absence, their great works fell to ruin, monsters that had been pray became predator, and humanity gained a chance to step out from under their shadow.">
+The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Draconic Gods ruled. The most powerful of the dragons foresaw their destruction, and in an effort to save themselves, they created the 10 Crowns. But these were not enough, in spite of the power of the Crowns, the great Draconic Gods perished. In their absence, their great works fell to ruin, monsters that had been pray became predator, and humanity gained a chance to step out from under their shadow.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -31,13 +31,13 @@ The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about thi
   <meta name="twitter:description" content="DM DM! Do I know all this?
 Perhaps, anyone who has recieved formal higher education likely knows the basics of these, and if you haven’t you likely know of it from stories passed down from your family
 The History of Tu’um Mundi is split into five ages, each one marked by new technology, magic, rulers, discoveriies, and more.
-The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Dragonic Gods ruled. The most powerful of the dragons foresaw their destruction, and in an effort to save themselves, they created the 10 Crowns. But these were not enough, in spite of the power of the Crowns, the great Draconic Gods perished. In their absence, their great works fell to ruin, monsters that had been pray became predator, and humanity gained a chance to step out from under their shadow.">
+The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Draconic Gods ruled. The most powerful of the dragons foresaw their destruction, and in an effort to save themselves, they created the 10 Crowns. But these were not enough, in spite of the power of the Crowns, the great Draconic Gods perished. In their absence, their great works fell to ruin, monsters that had been pray became predator, and humanity gained a chance to step out from under their shadow.">
 
   <meta itemprop="name" content="History">
   <meta itemprop="description" content="DM DM! Do I know all this?
 Perhaps, anyone who has recieved formal higher education likely knows the basics of these, and if you haven’t you likely know of it from stories passed down from your family
 The History of Tu’um Mundi is split into five ages, each one marked by new technology, magic, rulers, discoveriies, and more.
-The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Dragonic Gods ruled. The most powerful of the dragons foresaw their destruction, and in an effort to save themselves, they created the 10 Crowns. But these were not enough, in spite of the power of the Crowns, the great Draconic Gods perished. In their absence, their great works fell to ruin, monsters that had been pray became predator, and humanity gained a chance to step out from under their shadow.">
+The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Draconic Gods ruled. The most powerful of the dragons foresaw their destruction, and in an effort to save themselves, they created the 10 Crowns. But these were not enough, in spite of the power of the Crowns, the great Draconic Gods perished. In their absence, their great works fell to ruin, monsters that had been pray became predator, and humanity gained a chance to step out from under their shadow.">
   <meta itemprop="wordCount" content="536"></head>
 <body>
 
@@ -48,7 +48,7 @@ The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about thi
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="">Map</a></li>
+<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -61,7 +61,7 @@ The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about thi
 <p>The History of Tu&rsquo;um Mundi is split into five ages, each one marked by new technology, magic, rulers, discoveriies, and more.</p>
 <h1 id="the-first-era---rule-of-the-dragon-gods">The First Era - Rule of the Dragon Gods</h1>
 <h3 id="20000-years">~20,000 Years</h3>
-<p>Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Dragonic Gods ruled.
+<p>Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Draconic Gods ruled.
 The most powerful of the dragons foresaw their destruction, and in an effort to save themselves, they created the 10 Crowns.
 But these were not enough, in spite of the power of the Crowns, the great Draconic Gods perished. In their absence, their great works fell to ruin, monsters that had been pray became predator, and humanity gained a chance to step out from under their shadow.</p>
 <h1 id="the-second-era---budding-life">The Second Era - Budding Life</h1>
@@ -91,16 +91,16 @@ Kingdoms begin to pop up over the world, each headed by a powerful Dragon with a
 <ul>
 <li class=""><a href="//localhost:1313/">Home</a></li>
 
-<li class=" has-sub-menu"><a href="//localhost:1313/geography/">Geography<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="//localhost:1313/geography/">Places and Factions<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
-<li class=""><a href="//localhost:1313/geography/dragons/sola/">Sola</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -110,6 +110,7 @@ Kingdoms begin to pop up over the world, each headed by a powerful Dragon with a
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="//localhost:1313/geography/free-peoples/loch/">Loch Sword School</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
@@ -129,7 +130,6 @@ Kingdoms begin to pop up over the world, each headed by a powerful Dragon with a
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
-<li class=""><a href="//localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
