--- a/public/faith/organized/index.html
+++ b/public/faith/organized/index.html
@@ -43,7 +43,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="">Map</a></li>
+<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -65,7 +65,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Faith%5corganized.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/faith/" title="Faith"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Faith</a>
-<a class="nav nav-next" href="//localhost:1313/faith/votw/" title="The Voice of the World">Next - The Voice of the World <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="//localhost:1313/character-creation/" title="Character Creation">Next - Character Creation <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
 </main>
@@ -75,11 +75,11 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <ul>
 <li class=""><a href="//localhost:1313/">Home</a></li>
 
-<li class=" has-sub-menu"><a href="//localhost:1313/geography/">Geography<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="//localhost:1313/geography/">Places and Factions<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
@@ -94,6 +94,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="//localhost:1313/geography/free-peoples/loch/">Loch Sword School</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
@@ -113,7 +114,6 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
   
 <ul class="sub-menu">
 <li class="active"><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
-<li class=""><a href="//localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
