--- a/public/geography/dragons/centra/index.html
+++ b/public/geography/dragons/centra/index.html
@@ -19,18 +19,18 @@
 <meta property="og:url" content="//localhost:1313/geography/dragons/centra/">
   <meta property="og:site_name" content="The Shattered Lands of Tu&#39;um  Mundi">
   <meta property="og:title" content="Centra">
-  <meta property="og:description" content="The land of The Witch King.">
+  <meta property="og:description" content="The land of The Witch King. Entirely made up of the foothills stretching from the Dizazrha mountains to the barrier mountains around the Rot Queen’s land.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="geography">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Centra">
-  <meta name="twitter:description" content="The land of The Witch King.">
+  <meta name="twitter:description" content="The land of The Witch King. Entirely made up of the foothills stretching from the Dizazrha mountains to the barrier mountains around the Rot Queen’s land.">
 
   <meta itemprop="name" content="Centra">
-  <meta itemprop="description" content="The land of The Witch King.">
-  <meta itemprop="wordCount" content="6"></head>
+  <meta itemprop="description" content="The land of The Witch King. Entirely made up of the foothills stretching from the Dizazrha mountains to the barrier mountains around the Rot Queen’s land.">
+  <meta itemprop="wordCount" content="26"></head>
 <body>
 
 <div class="container"><header>
@@ -40,18 +40,18 @@
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="">Map</a></li>
+<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
 
 <div class="content-container">
 <main><h1>Centra</h1>
-<p>The land of The Witch King.</p>
+<p>The land of The Witch King. Entirely made up of the foothills stretching from the Dizazrha mountains to the barrier mountains around the Rot Queen&rsquo;s land.</p>
 <div class="edit-meta">
 
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cDragons%5ccentra.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/dragons/" title="Dragon&#39;s Land"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Dragon&#39;s Land</a>
-<a class="nav nav-next" href="//localhost:1313/geography/dragons/mithral/" title="Mithral">Next - Mithral <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cDragons%5ccentra.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/dragons/" title="Dragons"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Dragons</a>
+<a class="nav nav-next" href="//localhost:1313/geography/dragons/lomb/" title="Lomb">Next - Lomb <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
 </main>
@@ -61,16 +61,16 @@
 <ul>
 <li class=""><a href="//localhost:1313/">Home</a></li>
 
-<li class="parent has-sub-menu"><a href="//localhost:1313/geography/">Geography<span class="mark opened">-</span></a>
+<li class="parent has-sub-menu"><a href="//localhost:1313/geography/">Places and Factions<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
 
-<li class="parent has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark opened">-</span></a>
+<li class="parent has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
 <li class="active"><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
-<li class=""><a href="//localhost:1313/geography/dragons/sola/">Sola</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -80,6 +80,7 @@
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="//localhost:1313/geography/free-peoples/loch/">Loch Sword School</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
@@ -99,7 +100,6 @@
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
-<li class=""><a href="//localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
