--- a/public/geography/dragons/mithral/index.html
+++ b/public/geography/dragons/mithral/index.html
@@ -19,18 +19,21 @@
 <meta property="og:url" content="//localhost:1313/geography/dragons/mithral/">
   <meta property="og:site_name" content="The Shattered Lands of Tu&#39;um  Mundi">
   <meta property="og:title" content="Mithral">
-  <meta property="og:description" content="The land of the Smith King">
+  <meta property="og:description" content="The land of the Smith King. Hundreds, perhaps even thousands of miles of tunnels and caverns. Some carved by hand, some carved by dragons, and some developed from natural forces. Dwarves have spread through the entire area under the Dizazrha mountain range. They mostly gather in massive cities. They organize into clans, loosely connected by blood and bond.
+The Smith King’s influence covers the entire mountain range. Under his protection and governed by his hand selected council of ministers. Many skilled craftsmen create weapons and armor from precious minerals found int he mountains.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="geography">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Mithral">
-  <meta name="twitter:description" content="The land of the Smith King">
+  <meta name="twitter:description" content="The land of the Smith King. Hundreds, perhaps even thousands of miles of tunnels and caverns. Some carved by hand, some carved by dragons, and some developed from natural forces. Dwarves have spread through the entire area under the Dizazrha mountain range. They mostly gather in massive cities. They organize into clans, loosely connected by blood and bond.
+The Smith King’s influence covers the entire mountain range. Under his protection and governed by his hand selected council of ministers. Many skilled craftsmen create weapons and armor from precious minerals found int he mountains.">
 
   <meta itemprop="name" content="Mithral">
-  <meta itemprop="description" content="The land of the Smith King">
-  <meta itemprop="wordCount" content="6"></head>
+  <meta itemprop="description" content="The land of the Smith King. Hundreds, perhaps even thousands of miles of tunnels and caverns. Some carved by hand, some carved by dragons, and some developed from natural forces. Dwarves have spread through the entire area under the Dizazrha mountain range. They mostly gather in massive cities. They organize into clans, loosely connected by blood and bond.
+The Smith King’s influence covers the entire mountain range. Under his protection and governed by his hand selected council of ministers. Many skilled craftsmen create weapons and armor from precious minerals found int he mountains.">
+  <meta itemprop="wordCount" content="162"></head>
 <body>
 
 <div class="container"><header>
@@ -40,18 +43,22 @@
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="">Map</a></li>
+<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
 
 <div class="content-container">
 <main><h1>Mithral</h1>
-<p>The land of the Smith King</p>
+<p>The land of the Smith King. Hundreds, perhaps even thousands of miles of tunnels and caverns. Some carved by hand, some carved by dragons, and some developed from natural forces. Dwarves have spread through the entire area under the Dizazrha mountain range. They mostly gather in massive cities. They organize into clans, loosely connected by blood and bond.</p>
+<p>The Smith King&rsquo;s influence covers the entire mountain range. Under his protection and governed by his hand selected council of ministers. Many skilled craftsmen create weapons and armor from precious minerals found int he mountains.</p>
+<p>They have a strong sense of local community, and outsiders aren&rsquo;t trusted easily. They expect to see the same faces every day, and only trade with familiar people</p>
+<p>Houses are carved directly from the strone or built from rocks left over from carving.</p>
+<p>They have an appreciation for time, and it is traditional for families to have great artworks they they will add too over the course of generations.</p>
 <div class="edit-meta">
 
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cDragons%5cmithral.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/dragons/centra/" title="Centra"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Centra</a>
-<a class="nav nav-next" href="//localhost:1313/geography/dragons/sola/" title="Sola">Next - Sola <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cDragons%5cmithral.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/dragons/lomb/" title="Lomb"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Lomb</a>
+<a class="nav nav-next" href="//localhost:1313/geography/dragons/thel/" title="Thel">Next - Thel <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
 </main>
@@ -61,16 +68,16 @@
 <ul>
 <li class=""><a href="//localhost:1313/">Home</a></li>
 
-<li class="parent has-sub-menu"><a href="//localhost:1313/geography/">Geography<span class="mark opened">-</span></a>
+<li class="parent has-sub-menu"><a href="//localhost:1313/geography/">Places and Factions<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
 
-<li class="parent has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark opened">-</span></a>
+<li class="parent has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class="active"><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
-<li class=""><a href="//localhost:1313/geography/dragons/sola/">Sola</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -80,6 +87,7 @@
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="//localhost:1313/geography/free-peoples/loch/">Loch Sword School</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
@@ -99,7 +107,6 @@
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
-<li class=""><a href="//localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
