--- a/public/geography/dragons/sola/index.html
+++ b/public/geography/dragons/sola/index.html
@@ -40,7 +40,7 @@
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="">Map</a></li>
+<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -61,11 +61,11 @@
 <ul>
 <li class=""><a href="//localhost:1313/">Home</a></li>
 
-<li class="parent has-sub-menu"><a href="//localhost:1313/geography/">Geography<span class="mark opened">-</span></a>
+<li class="parent has-sub-menu"><a href="//localhost:1313/geography/">Places and Factions<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
 
-<li class="parent has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark opened">-</span></a>
+<li class="parent has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
@@ -80,6 +80,7 @@
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="//localhost:1313/geography/free-peoples/loch/">Loch Sword School</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
@@ -99,7 +100,6 @@
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
-<li class=""><a href="//localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
