--- a/public/geography/free-peoples/storm-riders/index.html
+++ b/public/geography/free-peoples/storm-riders/index.html
@@ -20,8 +20,8 @@
   <meta property="og:site_name" content="The Shattered Lands of Tu&#39;um  Mundi">
   <meta property="og:title" content="Storm Riders">
   <meta property="og:description" content="DM! DM! Can I be one of these guys??
-Of course! As you can see, there is very little info below, just ask me for more info and I’ll send you more lore, and we can figure out why your not chilling in the clouds
-Extremely little is known about these peoples.In the modern period, the Storm Riders seem closer to a large cult than they do an esteemed civilization. They hide in the clouds and are essentially unknown to the rest of the world. They worship a god they call Sturm, and wield powerful magics based on storms. Lightning, wind, and rain are their favored materials.">
+Of course! As you can see, there is very little info below, just ask me for more info and I’ll send you more lore, and we can figure out why you’re not chilling in the clouds
+Extremely little is known about these peoples. In the modern period, the Storm Riders seem closer to a large cult than they do an esteemed civilization. They hide in the clouds and are essentially unknown to the rest of the world. They worship a god they call Sturm, and wield powerful magics based on storms. Lightning, wind, and rain are their favored materials.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="geography">
@@ -29,14 +29,14 @@ Extremely little is known about these peoples.In the modern period, the Storm Ri
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Storm Riders">
   <meta name="twitter:description" content="DM! DM! Can I be one of these guys??
-Of course! As you can see, there is very little info below, just ask me for more info and I’ll send you more lore, and we can figure out why your not chilling in the clouds
-Extremely little is known about these peoples.In the modern period, the Storm Riders seem closer to a large cult than they do an esteemed civilization. They hide in the clouds and are essentially unknown to the rest of the world. They worship a god they call Sturm, and wield powerful magics based on storms. Lightning, wind, and rain are their favored materials.">
+Of course! As you can see, there is very little info below, just ask me for more info and I’ll send you more lore, and we can figure out why you’re not chilling in the clouds
+Extremely little is known about these peoples. In the modern period, the Storm Riders seem closer to a large cult than they do an esteemed civilization. They hide in the clouds and are essentially unknown to the rest of the world. They worship a god they call Sturm, and wield powerful magics based on storms. Lightning, wind, and rain are their favored materials.">
 
   <meta itemprop="name" content="Storm Riders">
   <meta itemprop="description" content="DM! DM! Can I be one of these guys??
-Of course! As you can see, there is very little info below, just ask me for more info and I’ll send you more lore, and we can figure out why your not chilling in the clouds
-Extremely little is known about these peoples.In the modern period, the Storm Riders seem closer to a large cult than they do an esteemed civilization. They hide in the clouds and are essentially unknown to the rest of the world. They worship a god they call Sturm, and wield powerful magics based on storms. Lightning, wind, and rain are their favored materials.">
-  <meta itemprop="wordCount" content="129"></head>
+Of course! As you can see, there is very little info below, just ask me for more info and I’ll send you more lore, and we can figure out why you’re not chilling in the clouds
+Extremely little is known about these peoples. In the modern period, the Storm Riders seem closer to a large cult than they do an esteemed civilization. They hide in the clouds and are essentially unknown to the rest of the world. They worship a god they call Sturm, and wield powerful magics based on storms. Lightning, wind, and rain are their favored materials.">
+  <meta itemprop="wordCount" content="130"></head>
 <body>
 
 <div class="container"><header>
@@ -46,7 +46,7 @@ Extremely little is known about these peoples.In the modern period, the Storm Ri
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="">Map</a></li>
+<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -56,15 +56,15 @@ Extremely little is known about these peoples.In the modern period, the Storm Ri
 <blockquote>
 <p>DM! DM! Can I be one of these guys??</p></blockquote>
 <blockquote>
-<p>Of course! As you can see, there is very little info below, just ask me for more info and I&rsquo;ll send you more lore, and we can figure out why your not chilling in the clouds</p></blockquote>
-<p>Extremely little is known about these peoples.In the modern period, the Storm Riders seem closer to a large cult than they do an esteemed civilization. They hide in the clouds and are essentially unknown to the rest of the world. They worship a god they call Sturm, and wield powerful  magics based on storms. Lightning, wind, and rain are their favored materials.</p>
+<p>Of course! As you can see, there is very little info below, just ask me for more info and I&rsquo;ll send you more lore, and we can figure out why you&rsquo;re not chilling in the clouds</p></blockquote>
+<p>Extremely little is known about these peoples. In the modern period, the Storm Riders seem closer to a large cult than they do an esteemed civilization. They hide in the clouds and are essentially unknown to the rest of the world. They worship a god they call Sturm, and wield powerful  magics based on storms. Lightning, wind, and rain are their favored materials.</p>
 <blockquote>
 <p>DM! DM! Has my character heard about/interacted with these guys??</p></blockquote>
 <blockquote>
 <p>Unless you have a specific reason your character knows them, probably not</p></blockquote>
 <div class="edit-meta">
 
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cFree%20Peoples%5cstorm-riders.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/free-peoples/dizazhra/" title="Dizazhra Mountain People"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Dizazhra Mountain People</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cFree%20Peoples%5cstorm-riders.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/free-peoples/loch/" title="Loch Sword School"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Loch Sword School</a>
 <a class="nav nav-next" href="//localhost:1313/geography/free-peoples/library/" title="The Great Library">Next - The Great Library <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -75,11 +75,11 @@ Extremely little is known about these peoples.In the modern period, the Storm Ri
 <ul>
 <li class=""><a href="//localhost:1313/">Home</a></li>
 
-<li class="parent has-sub-menu"><a href="//localhost:1313/geography/">Geography<span class="mark opened">-</span></a>
+<li class="parent has-sub-menu"><a href="//localhost:1313/geography/">Places and Factions<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
@@ -94,6 +94,7 @@ Extremely little is known about these peoples.In the modern period, the Storm Ri
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="//localhost:1313/geography/free-peoples/loch/">Loch Sword School</a></li>
 <li class="active"><a href="//localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
@@ -113,7 +114,6 @@ Extremely little is known about these peoples.In the modern period, the Storm Ri
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
-<li class=""><a href="//localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
