--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@ The world is covered in the ruins of an empire of the old age, brought low by th
   <meta itemprop="name" content="Home">
   <meta itemprop="description" content="Welcome to Tu’um Mundi Tu’um Mundi is a world twice shattered, standing in between the old age and the new. Powerful individuals rule over countries as God-Kings, wearing the ancient all-powerful Crowns, having stolen the title of “Dragons” from the ancient beasts that made them. In the empty space between them, people live in city-states and sovereign villages.
 The world is covered in the ruins of an empire of the old age, brought low by the war of the last shattering. The war left the land scarred, the edges of the land now disappear into nothingness, an impassable void, and the grave of the old empire’s capital sit in the center. Adventurers spend entire lifetimes exploring these ruins, looking for fame and fortune, and often finding only injury or death.">
-  <meta itemprop="wordCount" content="235"></head>
+  <meta itemprop="wordCount" content="287"></head>
 <body>
 
 <div class="container"><header>
@@ -42,7 +42,7 @@ The world is covered in the ruins of an empire of the old age, brought low by th
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="">Map</a></li>
+<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -56,6 +56,8 @@ The world is covered in the ruins of an empire of the old age, brought low by th
 <h3 id="themes">Themes</h3>
 <p>This campaign is about Power, in all its shapes, good and bad. I intend for you to become the rulers of a people and grow your influence throughout the campaign - to what end? I leave that to you.</p>
 <p>The campaign is meant to be heavily driven by your goals and actions. Sandbox-ish. To this, I promise that wherever you go, I will give you adventure, but I ask that you meet the work I put into making this campaign by being active participants in the world.</p>
+<h3 id="influences">Influences</h3>
+<p>If you want a good idea of some of the things that are going through my head when it comes to running this campaign and building this world, I am drawing a lot from the following works: Kill Six Billion Demons, Lord of the Rings, Dagger and Coin series, Elden Ring</p>
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
@@ -67,16 +69,16 @@ The world is covered in the ruins of an empire of the old age, brought low by th
 <ul>
 <li class="active"><a href="//localhost:1313/">Home</a></li>
 
-<li class=" has-sub-menu"><a href="//localhost:1313/geography/">Geography<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="//localhost:1313/geography/">Places and Factions<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
-<li class=""><a href="//localhost:1313/geography/dragons/sola/">Sola</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -86,6 +88,7 @@ The world is covered in the ruins of an empire of the old age, brought low by th
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="//localhost:1313/geography/free-peoples/loch/">Loch Sword School</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
 <li class=""><a href="//localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
@@ -105,7 +108,6 @@ The world is covered in the ruins of an empire of the old age, brought low by th
   
 <ul class="sub-menu">
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
-<li class=""><a href="//localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
